cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
project(thread_study)
add_subdirectory(lesson1-1)
add_subdirectory(lesson1-2)
add_subdirectory(lesson1-3)
add_subdirectory(lesson1-4)
add_subdirectory(lesson1-5)
add_subdirectory(lesson1-6)